--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -11,7 +11,7 @@ commands:
     description: "A command to configure google cloud to use the nivatest-environment"
     steps:
       - run:
-          name: "Decode and write nivatest service-account key into a json file"
+          name: "Setup nivatest"
           command: |
             set -o nounset
             echo $NIVATEST_SERVICE_KEY | base64 --decode --ignore-garbage > gcloud-service-key.json
@@ -23,7 +23,7 @@ commands:
     description: "A command to configure google cloud to use the nivatest-environment"
     steps:
       - run:
-          name: "Decode and write nivaprod service-account key into a json file"
+          name: "Setup nivaprod"
           command: |
             set -o nounset
             echo $NIVAPROD_SERVICE_KEY | base64 --decode --ignore-garbage > gcloud-service-key.json
@@ -50,7 +50,9 @@ commands:
             gcloud auth activate-service-account --key-file << parameters.gcloud-json-token >>
             gcloud --quiet auth configure-docker
             cat workspace/requested_containers | while read container; do
-              docker pull "${<< parameters.container-registry >>}-$container:latest" | grep -e 'Pulling from' -e Digest -e Status -e Error
+              if gcloud container images list-tags "${<< parameters.container-registry >>}-$container" | grep latest; then
+                docker pull "${<< parameters.container-registry >>}-$container:latest" | grep -e 'Pulling from' -e Digest -e Status -e Error
+              fi
             done
   build_containers:
     description: "A command to build containers, it expects three files in the workspace: requested_containers,
@@ -69,9 +71,14 @@ commands:
             :>sed_subber
             cat workspace/requested_containers | while read container; do
               echo "Building: $container from directory: ${docker_directories[$container]}"
-              docker build --cache-from "$CONTAINER_REGISTRY-$container:latest" \
-              --tag "$CONTAINER_REGISTRY-$container:$SHORT_GIT_HASH" \
-              --tag "$CONTAINER_REGISTRY-$container:latest" ${docker_directories[$container]} | cat
+              if docker images -q "$CONTAINER_REGISTRY-$container:latest" | grep -E .+; then
+                docker build --cache-from "$CONTAINER_REGISTRY-$container:latest" \
+                --tag "$CONTAINER_REGISTRY-$container:$SHORT_GIT_HASH" \
+                --tag "$CONTAINER_REGISTRY-$container:latest" ${docker_directories[$container]} | cat
+              else
+                docker build --tag "$CONTAINER_REGISTRY-$container:$SHORT_GIT_HASH" \
+                --tag "$CONTAINER_REGISTRY-$container:latest" ${docker_directories[$container]} | cat
+              fi
               echo "s|${image_names[$container]}|$CONTAINER_REGISTRY-$container:$SHORT_GIT_HASH|g" >> sed_subber
             done
   push_containers:
