Add k8s-job deletion to deploy command
As described in #2 and related to NIVANorge/nivacloud#131 we should
delete jobs before reapplying their .yaml files. Since there already
was a complicated regexp to match the names of actual deployments that
seemed like a good principle to extend.

I splitted out the part of the regexp that actually matches the name.
It does this by recognizing the following structure:
metadata:
  name: Anamewitha-possiblestripe
It only return the nameing part by using the \K keyword in the regexp.
So the implementation is as follows: For each container we are supplied
with the relevant directory that contains it's deployment or job.
For each file in that directory we try to find the
kind: Job
pattern. If we find it we match the name and call
kubectl delete jobs/name

After this we substitute the image name and call
kubectl apply -f - {subbed file contents}

Then if the newly applied file was an actual deployment we add it's
name to a file. After a files have been applied to the k8s cluster we
will use
kubectl rollout status deployment {name}
to wait for the deployments to complete rolling out

--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -122,10 +122,17 @@ commands:
             gcloud --quiet container clusters get-credentials << parameters.cluster >>
             source workspace/kubectl_deployment_directories
             :> new_deployments
+            perl_regexp_k8s_name_pattern='metadata:\n\s*name:\s*\K(\w*\-*\w*\s*\n)'
             cat workspace/requested_containers | while read container; do
               find ${kubectl_deployment_directories[$container]} -type f -name '*.tmpl.yaml' | while read line; do
+                if grep -E "^kind:\s*Job\s*$" $line; then
+                  jobname=$(grep -Pzo $perl_regexp_k8s_name_pattern $line)
+                  if kubectl get jobs | grep "$jobname"; then
+                    kubectl delete jobs/"$jobname"
+                  fi
+                fi
                 cat $line | sed -f workspace/sed_subber | kubectl apply -f -
-                (grep -Pzo 'kind:\s*Deployment\s*\n\s*metadata:\n\s*name:\s*\K(\w*\-*\w*\s*\n)' $line || true) >> new_deployments
+                (grep -Pzo "kind:\s*Deployment\s*\n\s*$perl_regexp_k8s_name_pattern" $line || true) >> new_deployments
               done
             done
             cat new_deployments | while read deployment_name; do
