--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -134,12 +134,12 @@ commands:
           name: Deploy
           command: |
             set -o nounset
-            echo ${<< parameters.project >>} | base64 --decode --ignore-garbage > gcloud-service-key.json
+            echo ${<< parameters.service_key >>} | base64 --decode --ignore-garbage > gcloud-service-key.json
             set -x
             gcloud auth activate-service-account --key-file gcloud-service-key.json
             gcloud --quiet config set project ${<< parameters.project >>}
             gcloud --quiet config set compute/zone $GCLOUD_COMPUTE_ZONE
-            gcloud --quiet container clusters get-credentials ${<< parameters.project >>}
+            gcloud --quiet container clusters get-credentials ${<< parameters.cluster >>}
             kubectl apply -f k8s/config/<< parameters.project >>/nivacloud-config-map.yaml
             source workspace/kubectl_deployment_directories
             :> new_deployments
