--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -151,7 +151,9 @@ commands:
             gcloud --quiet config set project ${<< parameters.project >>}
             gcloud --quiet config set compute/zone $GCLOUD_COMPUTE_ZONE
             gcloud --quiet container clusters get-credentials ${<< parameters.cluster >>}
-            kubectl apply -f k8s/config/${<< parameters.project >>}/config-map.yaml
+            if [ -e "k8s/config/${<< parameters.project >>}/config-map.yaml" ]; then
+                kubectl apply -f k8s/config/${<< parameters.project >>}/config-map.yaml
+            fi
             source circle_ci_files/kubectl_deployment_directories
             :> new_deployments
             perl_regexp_k8s_name_pattern='metadata:\n\s*name:\s*\K(\w+\-*\w*\s*\n)'
