Removed resource classes since that is an inaccessible payed feature

--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -13,19 +13,8 @@ persist-checkout: &persist-checkout
 
 executors:
   google-sdk-container:
-    parameters:
-      resource-class:
-        default: medium
-        enum:
-          - small
-          - medium
-          - medium+
-          - large
-          - xlarge
-        type: enum
     docker:
       - image: google/cloud-sdk:latest
-    resource_class: <<parameters.resource-class>>
   linux-machine:
     machine:
       image: ubuntu-1604:201903-01
@@ -249,9 +238,7 @@ jobs:
       - run_pytest_docker
   build_containers:
     description: "This command builds the containers listed in the container-file, defaults to file called: all_containers"
-    executor:
-      name: google-sdk-container
-      resource-class: large
+    executor: google-sdk-container
     steps:
       - *fast-checkout
       - setup_remote_docker
@@ -259,9 +246,7 @@ jobs:
           container-file: "changed_containers"
   build_and_push_to_nivatest:
     description: "This command builds all containers and pushes them to nivatest"
-    executor:
-      name: google-sdk-container
-      resource-class: large
+    executor: google-sdk-container
     steps:
       - *fast-checkout
       - setup_remote_docker
