Updating pip for installing dependencies, due to failing build_containers_and_run_pytest_on_machine in odm2-postgres-api reco

--- a/src/niva-google-cloud-orb.yml
+++ b/src/niva-google-cloud-orb.yml
@@ -57,6 +57,7 @@ commands:
             pyenv local 3.7.0 2.7.12
             python3 -m venv python3_venv
             . python3_venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
       - save_cache:
           paths:
